--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@
 pcb/*.bak
 pcb/*.kicad_pcb-bak
 code/AG_NTRIP_ESP/AG_NTRIP_ESP_private.ino
+code/AG_NTRIP_ESP-private/AG_NTRIP_ESP.jpg
+code/AG_NTRIP_ESP-private/AG_NTRIP_ESP_IOBoard.ino
+code/AG_NTRIP_ESP-private/BNO_ESP.h
+code/AG_NTRIP_ESP-private/BNO_ESP.ino
+code/AG_NTRIP_ESP-private/Core1code.ino
+code/AG_NTRIP_ESP-private/Core2code.ino
+code/AG_NTRIP_ESP-private/ESP32_simpleRTK_f9p.jpg
+code/AG_NTRIP_ESP-private/IDE_ESP32_settingsL.JPG
+code/AG_NTRIP_ESP-private/LICENSE
+code/AG_NTRIP_ESP-private/Misc.ino
+code/AG_NTRIP_ESP-private/MMA8452_AOG.cpp
+code/AG_NTRIP_ESP-private/MMA8452_AOG.h
+code/AG_NTRIP_ESP-private/Network_AOG.h
+code/AG_NTRIP_ESP-private/Network_AOG.ino
+code/AG_NTRIP_ESP-private/README.md
+code/AG_NTRIP_ESP-private/README.txt
